@@ -3103,14 +3103,13 @@ DRIVER(jy,12c)          //          12/19 W Junk Yard (1.2C Competition MOD)
 //DRIVER(jy,20)         //          11/20 W Junk Yard (2.0) //also done by Soren, but official now
 DRIVER(ph,04)           //WPC-901:  11/96 W Phantom Haus (0.4 Prototype) Manual: 07/96
 DRIVER(nbaf,11s)        //WPC-553:  03/97 B NBA Fastbreak (1.1, Sound S0.4)
-DRIVER(nbaf,11)         //          03/97 B NBA Fastbreak (1.1)
-DRIVER(nbaf,11a)        //          03/97 B NBA Fastbreak (1.1, Sound S2.0)
-DRIVER(nbaf,115)        //          05/97 B NBA Fastbreak (1.15)
-DRIVER(nbaf,21)         //          05/97 B NBA Fastbreak (2.1)
-DRIVER(nbaf,22)         //          05/97 B NBA Fastbreak (2.2)
-DRIVER(nbaf,23)         //          06/97 B NBA Fastbreak (2.3)
+DRIVER(nbaf,11)         //          03/97 B NBA Fastbreak (1.1, Sound S1.0)
+DRIVER(nbaf,11a)        //          03/97 B NBA Fastbreak (1.1, German Sound S2.0)
+DRIVER(nbaf,115)        //          05/97 B NBA Fastbreak (1.15, Sound S1.0)
+DRIVER(nbaf,21)         //          05/97 B NBA Fastbreak (2.1, Sound S3.0)
+DRIVER(nbaf,22)         //          05/97 B NBA Fastbreak (2.2, Sound S3.0)
+DRIVER(nbaf,23)         //          06/97 B NBA Fastbreak (2.3, Sound S3.0)
 DRIVER(nbaf,31)         //          09/97 B NBA Fastbreak (3.1, Sound S3.0)
-DRIVER(nbaf,31a)        //          09/97 B NBA Fastbreak (3.1, Sound S1.0)
 DRIVER(mm,05)           //WPC-559:  06/97 W Medieval Madness (0.5 Prototype)
 DRIVER(mm,10)           //          07/97 W Medieval Madness (1.0)
 DRIVER(mm,10u)          //          ??/06 W Medieval Madness (1.0 Ultrapin)
