@@ -242,8 +242,16 @@ static sim_tInportData nbaf_inportData[] = {
   core_textOutf(30,160,BLACK,"");
   }
 
-#define NBAF_SOUND \
+#define NBAF_SOUND1 \
 DCS_SOUNDROM5xm("fb-s2.1_0",CRC(32f42a82) SHA1(387636c8e9f8525e7442ccdced735392db113044), \
+                "fb-s3.1_0",CRC(033aa54a) SHA1(9221f3013f204a9a857aced5d774c606a7e48648), \
+                "fb-s4.1_0",CRC(6965a7c5) SHA1(7e72bbd3bad9accc8da1754c57c24ebdf13e57b9), \
+                "fb-s5.1_0",CRC(db50b79a) SHA1(9753d599cd822b55ed64bcf64955f625dc51997d), \
+                "fb-s6.1_0",CRC(f1633371) SHA1(a707748d3298ffb6d10d8308f4dae7982b540fa0))
+
+// German speech included in Sound ROM S2 3.0, no separate German speech ROM is necessary anymore
+#define NBAF_SOUND3 \
+DCS_SOUNDROM5xm("fb-s2.3_0",CRC(4594abd3) SHA1(d14654f0c2d29c28cae604e2dbcc9adf361b28a9), \
                 "fb-s3.1_0",CRC(033aa54a) SHA1(9221f3013f204a9a857aced5d774c606a7e48648), \
                 "fb-s4.1_0",CRC(6965a7c5) SHA1(7e72bbd3bad9accc8da1754c57c24ebdf13e57b9), \
                 "fb-s5.1_0",CRC(db50b79a) SHA1(9753d599cd822b55ed64bcf64955f625dc51997d), \
@@ -252,16 +260,12 @@ DCS_SOUNDROM5xm("fb-s2.1_0",CRC(32f42a82) SHA1(387636c8e9f8525e7442ccdced735392d
 /*-----------------
 /  ROM definitions
 /------------------*/
-WPC_ROMSTART(nbaf,31,"fb_g11.3_1",0x80000,CRC(acd84ec2) SHA1(bd641b26e7a577be9f8705b21de4a694400945ce))
-DCS_SOUNDROM5m("fb-s2.3_0",CRC(4594abd3) SHA1(d14654f0c2d29c28cae604e2dbcc9adf361b28a9),
-               "fb-s3.1_0",CRC(033aa54a) SHA1(9221f3013f204a9a857aced5d774c606a7e48648),
-               "fb-s4.1_0",CRC(6965a7c5) SHA1(7e72bbd3bad9accc8da1754c57c24ebdf13e57b9),
-               "fb-s5.1_0",CRC(db50b79a) SHA1(9753d599cd822b55ed64bcf64955f625dc51997d),
-               "fb-s6.1_0",CRC(f1633371) SHA1(a707748d3298ffb6d10d8308f4dae7982b540fa0))
-WPC_ROMEND
-WPC_ROMSTART(nbaf,31a,"fb_g11.3_1",0x80000,CRC(acd84ec2) SHA1(bd641b26e7a577be9f8705b21de4a694400945ce)) NBAF_SOUND WPC_ROMEND
+WPC_ROMSTART(nbaf,31,"fb_g11.3_1",0x80000,CRC(acd84ec2) SHA1(bd641b26e7a577be9f8705b21de4a694400945ce)) NBAF_SOUND3 WPC_ROMEND
 
-WPC_ROMSTART(nbaf,11,"g11-11.rom",0x80000,CRC(debfb64a) SHA1(7f50246f5fde1e7fc295be6b6bbd455e244e4c99)) NBAF_SOUND WPC_ROMEND
+//Version 1.0 is the production release.
+// This version requires version 1.0 Sound ROMs or higher.
+// German-jumpered games require version 2.0 of Sound ROM S2.
+WPC_ROMSTART(nbaf,11,"g11-11.rom",0x80000,CRC(debfb64a) SHA1(7f50246f5fde1e7fc295be6b6bbd455e244e4c99)) NBAF_SOUND1 WPC_ROMEND
 WPC_ROMSTART(nbaf,11a,"g11-11.rom",0x80000,CRC(debfb64a) SHA1(7f50246f5fde1e7fc295be6b6bbd455e244e4c99))
 DCS_SOUNDROM5m("fb-s2.2_0",CRC(f950f481) SHA1(8d7c54c5f27a85889179ee690512fa69b1357bb6),
                "fb-s3.1_0",CRC(033aa54a) SHA1(9221f3013f204a9a857aced5d774c606a7e48648),
@@ -276,24 +280,25 @@ DCS_SOUNDROM5xm("fb-s2.0_4",CRC(6a96f42b) SHA1(b6019bccdf62c9cf044a88d35019ebf05
                 "fb-s5.1_0",CRC(db50b79a) SHA1(9753d599cd822b55ed64bcf64955f625dc51997d),
                 "fb-s6.1_0",CRC(f1633371) SHA1(a707748d3298ffb6d10d8308f4dae7982b540fa0))
 WPC_ROMEND
-WPC_ROMSTART(nbaf,115,"g11-115",0x80000,CRC(c0ed9848) SHA1(196d13cf93fe61db36d3bd936549210875a88948)) NBAF_SOUND WPC_ROMEND
+WPC_ROMSTART(nbaf,115,"g11-115",0x80000,CRC(c0ed9848) SHA1(196d13cf93fe61db36d3bd936549210875a88948)) NBAF_SOUND1 WPC_ROMEND
 
-WPC_ROMSTART(nbaf,21,"g11-21.rom",0x80000,CRC(598d33d0) SHA1(98c2bfcca573a6e790a4d3ba306953ff0fb3b042)) NBAF_SOUND WPC_ROMEND
-WPC_ROMSTART(nbaf,22,"g11-22.rom",0x80000,CRC(2e7a9685) SHA1(2af250a947089469c942cf2c570063bdebd4abe4)) NBAF_SOUND WPC_ROMEND
-WPC_ROMSTART(nbaf,23,"g11-23.rom",0x80000,CRC(a6ceb6de) SHA1(055387ee7da57e1a8fbce803a0dd9e67d6dbb1bd)) NBAF_SOUND WPC_ROMEND
+//Version 2.1
+// Linked play requires Sound ROM S2 Version 3.0 and the NBA Fastbreak Linking Kit
+WPC_ROMSTART(nbaf,21,"g11-21.rom",0x80000,CRC(598d33d0) SHA1(98c2bfcca573a6e790a4d3ba306953ff0fb3b042)) NBAF_SOUND3 WPC_ROMEND
+WPC_ROMSTART(nbaf,22,"g11-22.rom",0x80000,CRC(2e7a9685) SHA1(2af250a947089469c942cf2c570063bdebd4abe4)) NBAF_SOUND3 WPC_ROMEND
+WPC_ROMSTART(nbaf,23,"g11-23.rom",0x80000,CRC(a6ceb6de) SHA1(055387ee7da57e1a8fbce803a0dd9e67d6dbb1bd)) NBAF_SOUND3 WPC_ROMEND
 
 /*--------------
 /  Game drivers
 /---------------*/
-CORE_GAMEDEF(nbaf,31,"NBA Fastbreak (3.1, Sound S3.0)",1997,"Bally",wpc_m95S,0)
-CORE_CLONEDEF(nbaf,31a,31,"NBA Fastbreak (3.1, Sound S1.0)",1997,"Bally",wpc_m95S,0)
-CORE_CLONEDEF(nbaf,11s,31,"NBA Fastbreak (1.1, Sound S0.4)",1997,"Bally",wpc_m95S,0)
-CORE_CLONEDEF(nbaf,11,31,"NBA Fastbreak (1.1)",1997,"Bally",wpc_m95S,0)
-CORE_CLONEDEF(nbaf,11a,31,"NBA Fastbreak (1.1, Sound S2.0)",1997,"Bally",wpc_m95S,0)
-CORE_CLONEDEF(nbaf,115,31,"NBA Fastbreak (1.15)",1997,"Bally",wpc_m95S,0)
-CORE_CLONEDEF(nbaf,21,31,"NBA Fastbreak (2.1)",1997,"Bally",wpc_m95S,0)
-CORE_CLONEDEF(nbaf,22,31,"NBA Fastbreak (2.2)",1997,"Bally",wpc_m95S,0)
-CORE_CLONEDEF(nbaf,23,31,"NBA Fastbreak (2.3)",1997,"Bally",wpc_m95S,0)
+CORE_GAMEDEF(nbaf,31,"NBA Fastbreak (3.1, English/German Sound S3.0)",1997,"Bally",wpc_m95S,0)
+CORE_CLONEDEF(nbaf,11s,31,"NBA Fastbreak (1.1, Sound S0.4)",1997,"Bally",wpc_m95S,0) //S0.4 only parked here, should only be used with proto game code
+CORE_CLONEDEF(nbaf,11,31,"NBA Fastbreak (1.1, Sound S1.0)",1997,"Bally",wpc_m95S,0)
+CORE_CLONEDEF(nbaf,11a,31,"NBA Fastbreak (1.1, German Sound S2.0)",1997,"Bally",wpc_m95S,0) //basically S1.0, but german speech
+CORE_CLONEDEF(nbaf,115,31,"NBA Fastbreak (1.15, Sound S1.0)",1997,"Bally",wpc_m95S,0)
+CORE_CLONEDEF(nbaf,21,31,"NBA Fastbreak (2.1, English/German Sound S3.0)",1997,"Bally",wpc_m95S,0)
+CORE_CLONEDEF(nbaf,22,31,"NBA Fastbreak (2.2, English/German Sound S3.0)",1997,"Bally",wpc_m95S,0)
+CORE_CLONEDEF(nbaf,23,31,"NBA Fastbreak (2.3, English/German Sound S3.0)",1997,"Bally",wpc_m95S,0)
 
 /*-----------------------
 / Simulation Definitions
